Updated our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring software developer transitioning from the field of medical social work.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love photography and playing Magic: The Gathering.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Development.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Kent, WA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always been interested in technology and solving problems that can make people's lives easier and more enjoyable.</p>
     </section>
 
     <footer id="footer">
