Updated the update to our details

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am an aspiring software developer transitioning from the field of medical social work.</p>
+      <p>I am an aspiring software developer transitioning from the field of medical social work after years of mental drain and abuse.</p>
       <h1>Where I'm From</h1>
       <p>Seattle, WA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I love photography and playing Magic: The Gathering.</p>
+      <p>I love photography, playing Magic: The Gathering and listening to Megan Thee Stallion.</p>
       <h1>What's your dream job?</h1>
-      <p>Software Development.</p>
+      <p>Software Development or Doggy Daycare owner.</p>
       <h1>Where do you live?</h1>
       <p>Kent, WA.</p>
       <h1>Why do you want to be a web developer?</h1>
